--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -8790,8 +8790,6 @@ bilibili	blbl
 耖	cgp
 耖	cgpe
 成功破获	cgph
-崇高品质	cgpi
-崇高品质	cgpz
 春秋分	cgqf
 吃瓜群众	cgqi
 春情	cgqn
@@ -21278,7 +21276,6 @@ bilibili	blbl
 罚不当罪	fbdz
 腐败分子	fbfi
 腐败分子	fbfz
-分布广泛	fbgf
 费工	fbgf
 奋不顾身	fbgs
 费改税	fbgs
@@ -26675,7 +26672,6 @@ bilibili	blbl
 辜鸿铭	gfhm
 过火	gfhm
 共患难	gfhn
-广泛好评	gfhp
 过后	gfhq
 更好	gfhs
 共和	gfht
@@ -26879,14 +26875,13 @@ bilibili	blbl
 工人党	gfrd
 共荣	gfre
 过日子	gfri
-工人	gfrj
-故人	gfrj
-过人	gfrj
 古人	gfrj
+故人	gfrj
+工人	gfrj
+过人	gfrj
 过热	gfrk
 古人类	gfrl
 攻入	gfrm
-广泛认同	gfrt
 过日子	gfrz
 过盛	gfsa
 甘肃	gfsb
@@ -27400,7 +27395,6 @@ bilibili	blbl
 高峰期	ghfq
 高富帅	ghfs
 高峰期	ghfu
-广泛性	ghfx
 高分子	ghfz
 高发	ghfz
 高飞	ghfz
@@ -27542,7 +27536,6 @@ bilibili	blbl
 高配	ghpf
 高票	ghpf
 高平	ghph
-高品质	ghpi
 高抛	ghpk
 广谱	ghpl
 高炮	ghpm
@@ -27550,7 +27543,6 @@ bilibili	blbl
 高炮团	ghpt
 高品位	ghpw
 高频	ghpy
-高品质	ghpz
 高强	ghqb
 高强度	ghqd
 高清	ghqd
@@ -28459,11 +28451,9 @@ bilibili	blbl
 观	gloc
 祼	glok
 观	glow
-改良品种	glpi
 该批	glpk
 该判	glpm
 该片	glpr
-改良品种	glpz
 诟	glq
 冠群	glqb
 观其	glqf
@@ -32348,7 +32338,6 @@ GPRS	gprs
 茴	heo
 薨	heoa
 茴	heoi
-获批准	hepi
 荒僻	hepj
 获批	hepk
 花瓶	hepm
@@ -32356,7 +32345,6 @@ GPRS	gprs
 获赔	hepo
 花盘	hepq
 荒坡	hepu
-获批准	hepz
 花枪	heqc
 花期	heqf
 获取	heqf
@@ -32987,9 +32975,7 @@ GPRS	gprs
 毫秒	hhmt
 劾	hhn
 劾	hhnn
-豪华配置	hhpi
 挥毫泼墨	hhpm
-豪华配置	hhpz
 豪强	hhqb
 霍去病	hhqb
 含糊其词	hhqc
@@ -35166,7 +35152,6 @@ GPRS	gprs
 红葡萄酒	hptj
 和平谈判	hptp
 和平统一	hpty
-和平稳定	hpwd
 和平相处	hpxc
 和平协议	hpxy
 和平演变	hpyb
@@ -35848,7 +35833,6 @@ GPRS	gprs
 婚配	hspf
 火山喷发	hspf
 轰趴馆	hspg
-花色品种	hspi
 轰趴	hspi
 好评	hspl
 好怕	hspn
@@ -35856,7 +35840,6 @@ GPRS	gprs
 好牌	hspr
 好脾气	hspu
 好朋友	hspy
-花色品种	hspz
 好奇	hsqa
 好强	hsqb
 好去处	hsqc
@@ -36686,7 +36669,6 @@ GPRS	gprs
 红牌	hxpr
 红皮书	hxps
 缓坡	hxpu
-呼吸平稳	hxpw
 红漆	hxqd
 缓期	hxqf
 红旗	hxqh
@@ -46410,12 +46392,10 @@ GPRS	gprs
 浸泡	jdpd
 巨大破坏	jdph
 洁癖	jdph
-经典配置	jdpi
 酒瓶子	jdpi
 酒瓶	jdpm
 江畔	jdpo
 鸡蛋碰石头	jdpt
-经典配置	jdpz
 酒瓶子	jdpz
 就地取材	jdqc
 汲取	jdqf
@@ -47377,7 +47357,6 @@ GPRS	gprs
 价格偏高	jgpg
 井喷	jgpi
 井喷式	jgps
-价格平稳	jgpw
 静观其变	jgqb
 进取	jgqf
 今古奇观	jgqg
@@ -68627,9 +68606,8 @@ GPRS	gprs
 男尸	nosb
 内湿	nosd
 内伤	nosj
-内视	nosl
-男双	nosl
 男神	nosl
+内视	nosl
 内室	nosn
 嬲	noso
 男式	noss
@@ -68673,8 +68651,6 @@ GPRS	gprs
 内向	noxr
 内秀	noxt
 内陷	noxv
-内乡	noxx
-内向型	noxx
 内线	noxx
 内销	noxy
 男友	noya
@@ -68844,7 +68820,6 @@ GPRS	gprs
 娘儿们	nsem
 女儿	nsew
 嫩	nsf
-女法官	nsfg
 怒放	nsfh
 奶粉	nsfm
 婻	nsfm
@@ -68852,10 +68827,8 @@ GPRS	gprs
 嫩	nsft
 嫩肤	nsfv
 女犯	nsfw
-女干部	nsgb
 女工	nsgf
 女鬼	nsgr
-女歌手	nsgs
 女红	nsgx
 女高音	nsgy
 嫩滑	nshd
@@ -68869,29 +68842,21 @@ GPRS	gprs
 奴化	nshj
 怒火	nshm
 女皇	nshr
-女护士	nshs
 女孩	nshv
 拿手好戏	nshx
 女孩子	nshz
 女汉子	nshz
 嫩枝	nsic
-女招待	nsid
 女真	nsif
-女职工	nsig
 女装	nsih
 女主	nsih
 奶嘴	nsii
 努嘴	nsii
 女足	nsii
 女贞子	nsii
-女主角	nsij
 娘子军	nsij
-女主内	nsin
 奶罩	nsio
 奶制品	nsip
-女主人	nsir
-女战士	nsis
-女总统	nsit
 女子	nsiv
 娘子	nsiv
 女贞	nsiy
@@ -68899,23 +68864,18 @@ GPRS	gprs
 嫩江	nsjd
 怒江	nsjd
 女警	nsje
-匿迹	nsjh
 女将	nsjh
-女警花	nsjh
-女记者	nsji
+匿迹	nsjh
 女眷	nsjm
-奴家	nsjn
 娘家	nsjn
+奴家	nsjn
 难上加难	nsjn
 凝神静气	nsjq
-女军人	nsjr
 娘舅	nsjr
-女教师	nsjs
 弩箭	nsjt
 凝神静气	nsju
 女角	nsjw
 泥沙俱下	nsjx
-女记者	nsjz
 奶咖	nski
 女裤	nskl
 女款	nsku
@@ -69164,9 +69124,9 @@ GPRS	gprs
 牛津	ntjd
 年节	ntje
 牛腱子	ntji
-年仅	ntjj
 年假	ntjj
 牛角尖	ntjj
+年仅	ntjj
 牛劲	ntjl
 牛圈	ntjo
 扭头就跑	ntjp
@@ -69404,8 +69364,8 @@ GPRS	gprs
 脑外科	nvwk
 乸	nvx
 脑细胞	nvxb
-乸型	nvxg
 脑血管	nvxg
+乸型	nvxg
 乸	nvxk
 脓性	nvxn
 脓血	nvxr
@@ -96526,7 +96486,6 @@ GPRS	gprs
 配制	pfit
 飘走	pfiu
 票子	pfiv
-配子	pfiv
 平反昭雪	pfix
 匹夫之勇	pfiy
 配件厂	pfjc
@@ -96589,15 +96548,10 @@ GPRS	gprs
 配色	pfsw
 聘书	pfsx
 皮肤瘙痒	pfsy
-配上	pfsy
 配套	pfta
-配体	pftj
-配台	pftl
 配图	pfto
 剽	pfu
 聘期	pfuf
-配齐	pfuh
-配器	pfui
 聘请	pful
 平方千米	pfum
 剽窃	pfun
@@ -96638,9 +96592,9 @@ GPRS	gprs
 飘曳	pfyo
 配钥匙	pfys
 飘移	pfyt
-聘用	pfyw
-配乐	pfyw
 飘逸	pfyw
+配乐	pfyw
+聘用	pfyw
 聘约	pfyx
 匹夫有责	pfyz
 聘用制	pfyz
@@ -96652,7 +96606,6 @@ GPRS	gprs
 配制	pfzt
 飘走	pfzu
 票子	pfzv
-配子	pfzv
 平反昭雪	pfzx
 匹夫之勇	pfzy
 颇费周折	pfzz
@@ -96727,8 +96680,8 @@ GPRS	gprs
 旁边	phbz
 烹茶	phce
 平喘	phci
-平仓	phcj
 平常	phcj
+平仓	phcj
 平畴	phco
 平川	phcr
 平车	phcs
@@ -96770,9 +96723,9 @@ GPRS	gprs
 旁观者	phgz
 旁	phh
 平衡表	phhb
-平湖	phhd
 平滑	phhd
 平衡点	phhd
+平湖	phhd
 旁	phhe
 噗哈哈哈	phhh
 平滑肌	phhj
@@ -96794,15 +96747,14 @@ GPRS	gprs
 平	phii
 旁坐	phij
 旁证	phil
-配合治疗	phil
 烹制	phit
 痞子	phiv
 庞杂	phiw
 平局	phjb
 平津	phjd
 平静	phjg
-平价	phjj
 疲倦	phjj
+平价	phjj
 平均	phju
 旁及	phjw
 平级	phjx
@@ -96874,7 +96826,6 @@ GPRS	gprs
 破坏团结	phtj
 平摊	phtk
 平台	phtl
-旁通	phtl
 烹调	phtl
 平头	phtn
 平躺	phtr
@@ -96938,54 +96889,38 @@ GPRS	gprs
 喷薄	pibe
 皮之不存，毛将焉附	pibf
 噼	pibh
-品质保证	pibi
 跑步机	pibj
-跑遍	pibl
-配置比例	pibl
 旁征博引	piby
 跑步	piby
 品茶	pice
 噗嗤	pici
 品尝	picj
 跑操	pick
-品质超群	picq
 跑出去	picq
 跑车	pics
-品质超群	picu
 跑出去	picu
-品出	picv
 喷出	picv
 喷出岩	picy
 跑单帮	pidb
 跑动	pidg
 啪嗒	pidi
-批准登记	pidj
 趴倒	pidj
 品德	pidk
 跑得快	pidk
 跑掉	pidk
-品读	pidl
 跑调	pidl
 跑道	pidm
 跑电	pido
-跑到	pids
-铺在地上	pids
 品第	pidt
 蹒	pie
 蹒	pief
-品质恶劣	piel
 喷	pif
-批准发布	pifb
-品种繁多	pifd
-品种丰富	piff
 嘌	pifg
 喷发	pifn
 喷	pifo
 哱	pifv
 喷饭	pifw
-批准发行	pifx
 喷发	pifz
-批准公布	pigb
 品格	pigc
 喷灌	pigd
 跑过	pigf
@@ -96997,7 +96932,6 @@ GPRS	gprs
 喷画	pihd
 呯	pihi
 喷火	pihm
-跑回	piho
 喷壶	pihu
 喷绘	pihx
 品	pii
@@ -97012,12 +96946,8 @@ GPRS	gprs
 喷子	piiv
 啤酒	pijd
 啤酒肚	pijd
-喷溅	pijd
-跑进	pijg
 啤酒花	pijh
 喷浆	pijh
-配置基金	pijj
-批准进口	pijk
 啤酒瓶	pijp
 脾主肌肉	pijr
 皮质激素	pijs
@@ -97025,13 +96955,11 @@ GPRS	gprs
 品级	pijx
 啪	pik
 跑酷	pikf
-批准开工	pikg
 跑开	pikg
 喷口	piki
 啪	pikr
 蹁	pil
 铺张浪费	pilf
-品质良好	pilh
 跑来	pilh
 嘌呤	pili
 品论	pill
@@ -97060,7 +96988,6 @@ GPRS	gprs
 哌嗪	piqi
 喷气机	piqj
 跑圈	piqo
-品种齐全	piqq
 喷泉	piqr
 喷气式	piqs
 喷气	piqt
@@ -97084,7 +97011,6 @@ GPRS	gprs
 喷上	pisy
 喷涂	pitd
 喷嚏	piti
-跑跳	piti
 跑堂	pitj
 喷头	pitn
 喷图	pito
@@ -97102,21 +97028,17 @@ GPRS	gprs
 喷泉	piur
 喷气式	pius
 喷气	piut
-品种齐全	piuu
 跑去	piuu
 咆	piw
 咆	piwb
 品玩	piwg
 喷雾	piwh
-批准文号	piwh
 品味	piwi
 品位	piwj
 喷雾剂	piwj
-配置文件	piwj
 趴窝	piwn
 喷雾器	piwq
 喷雾器	piwu
-跑外	piww
 品相	pixc
 品系	pixe
 跑鞋	pixf
@@ -97154,22 +97076,16 @@ GPRS	gprs
 片甲不回	pjbh
 破旧不堪	pjbk
 片甲不留	pjbl
-偏北	pjby
 贫贱不能移	pjby
 偏才	pjcf
 仆从	pjcj
 偏差	pjcm
-偏财	pjco
-偏出	pjcv
 凭此	pjcy
 破镜重圆	pjcy
-偏大	pjda
 佩戴	pjdf
 凭吊	pjdi
-偏低	pjdj
 凭单	pjdm
 佩刀	pjdn
-偏多	pjdw
 佩刀	pjdz
 便	pjf
 贫贱夫妻百事哀	pjfa
@@ -97177,11 +97093,8 @@ GPRS	gprs
 便	pjfk
 佩服	pjfv
 偏锋	pjfy
-偏高	pjgh
 偏光	pjgj
 凭感觉	pjgj
-偏关	pjgm
-偏官	pjgn
 偏股型	pjgx
 偏好	pjhs
 凭仗	pjij
@@ -97191,43 +97104,35 @@ GPRS	gprs
 偏执狂	pjik
 凭证	pjil
 凭着	pjim
-偏窄	pjin
 偏置	pjio
 披坚执锐	pjir
 偏转	pjis
-偏重	pjit
 堡子	pjiv
 偏重于	pjiy
 仆	pjj
 偏激	pjjd
 凭藉	pjje
 僻静	pjjg
-佩剑	pjjj
 凭借	pjjj
+佩剑	pjjj
 凭据	pjjk
 仆街	pjjk
 偏见	pjjo
 偏角	pjjw
-普及教育	pjjy
 偏枯	pjkc
 偏口	pjki
-普及开来	pjkl
 凭空	pjkn
 偏科	pjkt
 偏口鱼	pjky
 偏	pjl
 偏历	pjla
 凭栏	pjlc
-偏劳	pjle
 偏离	pjlh
 佩兰	pjlm
 偏	pjlo
 破旧立新	pjlx
 平静面对	pjmd
-偏盲	pjmh
 偏门	pjmj
-偏南	pjnf
-偏难	pjnl
 破镜难圆	pjny
 俜	pjo
 俜	pjos
@@ -97236,24 +97141,16 @@ GPRS	gprs
 偏僻	pjpj
 偏颇	pjpn
 偏颇	pjpz
-偏巧	pjqf
 拼尽全力	pjql
-偏轻	pjqs
 判决认定	pjrd
 仆人	pjrj
-偏软	pjrs
 僻壤	pjru
 仳	pjs
 帕金森病	pjsb
-偏嗜	pjsi
 偏食	pjsj
 凭什么	pjsm
-偏少	pjsp
-偏是	pjsr
 偏私	pjst
 偏色	pjsw
-判决生效	pjsx
-偏上	pjsy
 偏瘫	pjth
 偏听	pjti
 偏袒	pjtl
@@ -97263,25 +97160,19 @@ GPRS	gprs
 堡	pju
 偏巧	pjuf
 拼尽全力	pjul
-偏轻	pjus
 堡	pjuu
 佩	pjw
 偏微分	pjwf
 凭	pjww
-偏斜	pjxj
 偏心	pjxl
-偏小	pjxp
 偏向	pjxr
 凭险	pjxv
 偏狭	pjxw
 凭虚	pjxy
-普济消毒饮	pjxy
 俳	pjy
 偏压	pjya
 俳	pjyd
 偏要	pjyf
-偏于	pjyg
-偏远	pjyg
 便宜货	pjyh
 偏倚	pjyj
 仆役	pjyk
@@ -97296,7 +97187,6 @@ GPRS	gprs
 偏执狂	pjzk
 凭证	pjzl
 凭着	pjzm
-偏窄	pjzn
 偏置	pjzo
 披坚执锐	pjzr
 偏转	pjzs
@@ -97316,8 +97206,8 @@ GPRS	gprs
 拍巴掌	pkbi
 排便	pkbj
 排比句	pkbj
-批捕	pkbk
 拼搏	pkbk
+批捕	pkbk
 批办	pkbn
 排版	pkbr
 排比	pkbs
@@ -97342,20 +97232,15 @@ GPRS	gprs
 拼多多	pkdd
 排毒	pkdg
 扑倒	pkdj
-抛掉	pkdk
 拍打	pkdk
 拼读	pkdl
 破口大骂	pkdm
 批斗	pkdn
 扑蝶	pkdo
-抛到	pkds
-拍电视	pkds
-排到	pkds
 扑地	pkdu
 排队	pkdv
 拍电影	pkdy
 扑尔敏	pkem
-贫困儿童	pket
 批发部	pkfb
 拼法	pkfd
 排放	pkfh
@@ -97388,9 +97273,9 @@ GPRS	gprs
 抛荒	pkhe
 搒	pkhh
 批号	pkhi
+排号	pkhi
 抨	pkhi
 掊	pkhi
-排号	pkhi
 批货	pkhj
 排行	pkhk
 彷徨	pkhk
@@ -97399,7 +97284,6 @@ GPRS	gprs
 捧回	pkho
 排好	pkhs
 捧红	pkhx
-扑在	pkia
 拍砖	pkia
 批注	pkid
 贫困职工	pkig
@@ -97409,12 +97293,10 @@ GPRS	gprs
 抛掷	pkik
 排中律	pkil
 披着	pkim
-拍着	pkim
 捧着	pkim
 拼字	pkin
 拍照片	pkip
 拍照	pkir
-批准书	pkis
 批转	pkis
 排长	pkit
 破裤子缠腿	pkit
@@ -97424,12 +97306,10 @@ GPRS	gprs
 扑	pkj
 拼尽	pkjb
 扑救	pkjf
-扑击	pkjg
 抨击	pkjg
-拍击	pkjg
 批件	pkjj
-拼接	pkjk
 排挤	pkjk
+拼接	pkjk
 披肩	pkjl
 批卷	pkjm
 披甲	pkjo
@@ -97444,10 +97324,8 @@ GPRS	gprs
 排列	pkla
 扑楞	pklc
 排涝	pkld
-批零	pklh
 披露	pklh
 排雷	pklh
-贫困落后	pklh
 排料	pklm
 拼力	pkln
 排卵期	pklq
@@ -97518,8 +97396,8 @@ GPRS	gprs
 排水沟	pksg
 排水管	pksg
 抛售	pksj
-拍手	pksk
 拍摄	pksk
+拍手	pksk
 排水量	pksl
 拼杀	pksm
 抛射	pksr
@@ -97588,13 +97466,11 @@ GPRS	gprs
 排忧	pkyn
 抛秧	pkyt
 排印	pkyw
-徘	pkyy
 排	pkyy
+徘	pkyy
 披	pkz
-扑在	pkza
 拍砖	pkza
 批注	pkzd
-贫困职工	pkzg
 批准	pkzh
 撇嘴	pkzi
 拍掌	pkzj
@@ -97606,7 +97482,6 @@ GPRS	gprs
 拼字	pkzn
 拍照片	pkzp
 拍照	pkzr
-批准书	pkzs
 批转	pkzs
 排长	pkzt
 破裤子缠腿	pkzt
@@ -97806,27 +97681,21 @@ GPRS	gprs
 片面追求	pmiu
 瓶子	pmiv
 炮战	pmiy
-普及本	pmjb
-普及版	pmjb
-普及度	pmjd
 普济	pmjd
 普教	pmjf
 炮击	pmjg
 判决	pmjh
 贫瘠	pmjh
-叛军	pmjl
-普及率	pmjl
 瓶颈	pmjl
+叛军	pmjl
 判卷	pmjm
 盆架	pmjn
 瞥见	pmjo
 炮舰	pmjq
 盆景	pmjr
 判决书	pmjs
-普及率	pmjs
 普降	pmjv
 普及	pmjw
-普及型	pmjx
 拍卖交易	pmjy
 盆架	pmjz
 贫矿	pmka
@@ -98019,8 +97888,8 @@ GPRS	gprs
 皮疹	pnih
 皮质	pniq
 皮制	pnit
-怕脏	pniv
 皮脂	pniv
+怕脏	pniv
 皮脂腺	pnix
 排难解纷	pnjf
 皮夹	pnjh
@@ -98046,8 +97915,6 @@ GPRS	gprs
 皮帽	pnmo
 皮毛	pnmt
 皮囊	pnnf
-怕难	pnnl
-颇能	pnnl
 皮内	pnno
 皮袍	pnpl
 怦怦	pnpn
@@ -98087,8 +97954,8 @@ GPRS	gprs
 皮纹	pnwx
 皮屑	pnxb
 皮相	pnxc
-皮靴	pnxf
 皮鞋	pnxf
+皮靴	pnxf
 盘尼西林	pnxl
 怕羞	pnxm
 颇显	pnxr
@@ -98205,7 +98072,6 @@ GPRS	gprs
 普普通通	pptt
 乒乓球队	ppud
 翩翩起舞	ppuw
-平平稳稳	ppww
 批评意见	ppyj
 批评与自我批评	ppyp
 碰碰运气	ppyq
@@ -98287,8 +98153,8 @@ GPRS	gprs
 喷气式飞机	pqsj
 爬山	pqso
 盘山	pqso
-爬升	pqst
 盘算	pqst
+爬升	pqst
 爬上	pqsy
 盘算着	pqsz
 盘头	pqtn
@@ -98427,21 +98293,17 @@ GPRS	gprs
 排山倒海	psdh
 拼死抵抗	psdk
 匹敌	psdt
-拍摄电影	psdy
 嫖	psf
 匹夫	psfg
 姘夫	psfg
 姉	psfi
-姘妇	psfs
 嫔妃	psfs
-拍摄功能	psgn
+姘妇	psfs
 颇受好评	pshp
 颇受欢迎	pshy
 叵	psi
 匹兹堡	psib
 胼手胝足	psii
-平时在家	psij
-拍摄照片	psip
 姘居	psjb
 㛹	psjf
 拍手叫好	psjh
@@ -98449,16 +98311,12 @@ GPRS	gprs
 嫖妓	psjs
 脾失健运	psjy
 帕斯卡尔	pske
-平时考核	pskh
 嫖客	pskn
-披上绿装	psli
 脾肾两虚	pslx
-披上绿装	pslz
 姘	psm
 姘	psmg
 扑朔迷离	psml
 媲美	psmm
-拍摄模式	psms
 匹马	psmx
 嫔	psn
 嫔	psnr
@@ -98469,8 +98327,6 @@ GPRS	gprs
 婆娑起舞	psqw
 媲	psr
 媲	psrs
-平时上班	pssb
-平时上课	pssk
 嫖宿	pssn
 姘头	pstn
 娉婷	psts
@@ -98480,14 +98336,9 @@ GPRS	gprs
 匹	psww
 菩萨心肠	psxc
 萍水相逢	psxf
-平时喜欢	psxh
-平时训练	psxl
 派上用场	psyc
-拍摄影片	psyp
 脾肾阳虚	psyx
 匹兹堡	pszb
-平时在家	pszj
-拍摄照片	pszp
 胼手胝足	pszz
 篇	pt
 篷	pt
@@ -98670,10 +98521,10 @@ GPRS	gprs
 陪着	pvim
 陪葬品	pvip
 胼胝体	pvit
-胖子	pviv
-胼胝	pviv
-脾脏	pviv
 膨胀	pviv
+胖子	pviv
+脾脏	pviv
+胼胝	pviv
 陪酒	pvjd
 陪假	pvjj
 陪嫁	pvjs
@@ -98743,44 +98594,29 @@ GPRS	gprs
 陪着	pvzm
 陪葬品	pvzp
 胼胝体	pvzt
+膨胀	pvzv
 胖子	pvzv
 脾脏	pvzv
-膨胀	pvzv
+胼胝	pvzv
 刨	pw
 狉	pwad
-脾胃不和	pwbh
-颇为不满	pwbm
 刨除	pwcv
-评委点评	pwdp
 匍	pwf
 匍	pwfk
 匍匐	pwfw
 刨根	pwgc
-平稳过渡	pwgd
-颇为尴尬	pwgg
-颇为感慨	pwgk
 鲆	pwh
 鳑	pwhh
 鲆	pwhi
-颇为好奇	pwhq
-颇为好奇	pwhu
 狍子	pwiv
-颇为紧张	pwji
-颇为紧张	pwjz
 刨坑	pwku
-颇为满意	pwmy
 逄	pwn
 鲏	pwnl
 逄	pwnn
-颇为期待	pwqd
 刨去	pwqu
 脾胃湿热	pwsr
-平稳推进	pwtj
-评委投票	pwtp
-颇为头疼	pwtt
 刨土	pwtu
 刨	pwu
-颇为期待	pwud
 刨去	pwuu
 狍	pww
 狍	pwwb
@@ -98998,19 +98834,13 @@ GPRS	gprs
 皮鞭	pzbf
 皮包骨	pzbg
 皮瓣	pzbh
-配置比例	pzbl
 皮包	pzbw
 旁征博引	pzby
-品质保证	pzbz
 皮层	pzcb
 皮草	pzce
-品质超群	pzcq
-品质超群	pzcu
 颇大	pzda
-批准逮捕	pzdb
 皮带	pzdf
 皮冻	pzdh
-批准登记	pzdj
 皮袋	pzdj
 颇得	pzdk
 皮带轮	pzdl
@@ -99018,22 +98848,16 @@ GPRS	gprs
 皮蛋	pzdv
 颇多	pzdw
 皮大衣	pzdy
-品质恶劣	pzel
 皮尔斯	pzes
 皮肤癌	pzfa
-批准发布	pzfb
 皮肤病	pzfb
 颇费	pzfb
-品种繁多	pzfd
-品种丰富	pzff
 颇丰	pzfg
 皮肤科	pzfk
 皮筏	pzft
 皮肤	pzfv
 颇负	pzfw
-批准发行	pzfx
 颇感	pzga
-批准公布	pzgb
 皮革	pzgf
 颇高	pzgh
 皮管	pzgt
@@ -99059,12 +98883,10 @@ GPRS	gprs
 皮质激素	pzjs
 皮筋	pzjt
 皮夹子	pzjz
-批准开工	pzkg
 皮裤	pzkl
 皮卡	pzky
 皮	pzl
 铺张浪费	pzlf
-品质良好	pzlh
 颇令	pzlj
 皮	pzll
 皮棉	pzmc
@@ -99080,7 +98902,6 @@ GPRS	gprs
 皮皮虾	pzpx
 皮球	pzqg
 皮裙	pzql
-品种齐全	pzqq
 皮肉	pzro
 皮肉伤	pzrs
 颇深	pzsd
@@ -99101,9 +98922,6 @@ GPRS	gprs
 皮条	pztw
 皮球	pzug
 皮裙	pzul
-品种齐全	pzuu
-批准文号	pzwh
-配置文件	pzwj
 颇为	pzwm
 皮外伤	pzws
 皮纹	pzwx
@@ -100829,10 +100647,8 @@ GPRS	gprs
 癯	qhoj
 瘸	qhok
 敲破	qhpa
-期货品种	qhpi
 旗袍	qhpl
 亲朋	qhpv
-期货品种	qhpz
 亲戚	qhqa
 弃权	qhqc
 凄清	qhqd
@@ -102988,12 +102804,10 @@ QQ密码	qqmm
 全身皮肤	qspf
 轻飘	qspf
 七品	qspi
-强势品种	qspi
 轻拍	qspk
 轻判	qspm
 轻飘飘	qspp
 切片	qspr
-强势品种	qspz
 七巧板	qsqb
 翘翘板	qsqb
 轻骑兵	qsqb
@@ -104515,10 +104329,9 @@ QQ密码	qqmm
 润喉	rdhi
 润滑脂	rdhi
 瀼	rdhi
-润滑剂	rdhj
-溶化	rdhj
 融化	rdhj
 融合	rdhj
+润滑剂	rdhj
 染红	rdhx
 润滑油	rdhy
 润滑脂	rdhz
@@ -104590,9 +104403,8 @@ QQ密码	qqmm
 人丁兴旺	rdxw
 热岛效应	rdxy
 浈	rdy
-染有	rdya
-染液	rdyd
 溶液	rdyd
+染液	rdyd
 溶于	rdyg
 日雕月琢	rdyi
 浈	rdyj
@@ -104733,8 +104545,6 @@ QQ密码	qqmm
 瑞	rg
 韧	rg
 瑞安	rgan
-如果不能	rgbn
-如果不是	rgbs
 人工操作	rgci
 瑞昌	rgcr
 人工操作	rgcz
@@ -104950,8 +104760,8 @@ QQ密码	qqmm
 仍在	rjia
 人之初	rjic
 人渣	rjid
-仁政	rjif
 任职	rjif
+仁政	rjif
 人造革	rjig
 人族	rjih
 仍做	rjij
@@ -105010,9 +104820,8 @@ QQ密码	qqmm
 人满	rjmd
 人马座	rjmi
 人们	rjmj
-人命	rjmj
 任命	rjmj
-仍将面临	rjml
+人命	rjmj
 任命书	rjms
 人脉	rjmv
 任免	rjmw
@@ -105144,10 +104953,10 @@ QQ密码	qqmm
 入境游客	rjyk
 仍以	rjyl
 日积月累	rjyl
-人烟	rjym
 仁义	rjym
-仍由	rjyo
+人烟	rjym
 任由	rjyo
+仍由	rjyo
 任意球	rjyq
 人与人	rjyr
 人影	rjyr
@@ -105161,8 +104970,8 @@ QQ密码	qqmm
 仍在	rjza
 人之初	rjzc
 人渣	rjzd
-仁政	rjzf
 任职	rjzf
+仁政	rjzf
 人造革	rjzg
 人族	rjzh
 仍做	rjzj
@@ -105554,7 +105363,6 @@ QQ密码	qqmm
 入春	rmcg
 乳畜	rmch
 入仓	rmcj
-入出境	rmcj
 入场券	rmcq
 入场	rmcu
 入场券	rmcu
@@ -105565,8 +105373,8 @@ QQ密码	qqmm
 乳齿	rmcy
 入洞	rmdd
 入党	rmdj
-入道	rmdm
 熔断	rmdm
+入道	rmdm
 入定	rmdn
 入到	rmds
 入地	rmdu
@@ -105592,10 +105400,10 @@ QQ密码	qqmm
 入锅	rmgy
 入海	rmhd
 燃耗	rmhg
-乳化剂	rmhj
-入伙	rmhj
 熔化	rmhj
+入伙	rmhj
 糅合	rmhj
+乳化剂	rmhj
 入海口	rmhk
 入行	rmhk
 入户	rmhl
@@ -105605,8 +105413,8 @@ QQ密码	qqmm
 乳汁	rmid
 入职	rmif
 入赘	rmig
-入主	rmih
 入座	rmih
+入主	rmih
 入住	rmij
 燃眉之急	rmij
 燃着	rmim
@@ -105642,9 +105450,9 @@ QQ密码	qqmm
 入流	rmld
 乳酪	rmlf
 入理	rmlg
+燃料	rmlm
 熔炉	rmlm
 熔炼	rmlm
-燃料	rmlm
 燃料箱	rmlx
 燃料油	rmly
 入	rmm
@@ -105743,8 +105551,8 @@ QQ密码	qqmm
 乳畜业	rmxy
 人民英雄纪念碑	rmyb
 乳液	rmyd
-人莫予毒	rmyd
 燃油	rmyd
+人莫予毒	rmyd
 入药	rmye
 乳燕	rmyf
 入云	rmyg
@@ -105763,8 +105571,8 @@ QQ密码	qqmm
 乳汁	rmzd
 入职	rmzf
 入赘	rmzg
-入主	rmzh
 入座	rmzh
+入主	rmzh
 入住	rmzj
 燃眉之急	rmzj
 燃着	rmzm
@@ -106084,8 +105892,8 @@ QQ密码	qqmm
 日日	rrrr
 日盛	rrsa
 日甚	rrsf
-日商	rrsh
 日霜	rrsh
+日商	rrsh
 日食	rrsj
 日神	rrsl
 日数	rrsm
@@ -106176,25 +105984,15 @@ QQ密码	qqmm
 软包装	rsbz
 如厕	rsca
 软尺	rscb
-如潮	rscd
 入室操戈	rscg
-如春	rscg
-如次	rsch
-如痴	rsch
-人声嘈杂	rsci
-如常	rscj
-如初	rscl
 软磁盘	rscp
 如此	rscy
-人声嘈杂	rscz
 软碟	rsda
 人声鼎沸	rsdf
 软刀子	rsdi
 软钉子	rsdi
 软垫	rsdk
 人死灯灭	rsdm
-如斗	rsdn
-如电	rsdo
 人生地不熟	rsds
 软蛋	rsdv
 戎狄	rsdw
@@ -106203,29 +106001,18 @@ QQ密码	qqmm
 软钉子	rsdz
 婼	rsea
 软腭	rsev
-如焚	rsfc
-如法	rsfd
 瑞士法郎	rsfl
-如飞	rsfn
 如风	rsfw
-如非	rsfy
-如飞	rsfz
-如果把	rsgb
 软骨病	rsgb
 人神共愤	rsgf
-如故	rsgf
 软膏	rsgh
 人所共知	rsgi
 人所共见	rsgj
 人身攻击	rsgj
 如果	rsgo
-如归	rsgp
 如皋	rsgr
-如果是	rsgs
-如果说	rsgs
 软管	rsgt
 软骨头	rsgt
-如果有	rsgy
 人所共知	rsgz
 嬬	rsha
 如画	rshd
@@ -106239,9 +106026,7 @@ QQ密码	qqmm
 如火	rshm
 如虹	rsho
 软和	rsht
-如虎	rshy
 如	rsi
-如在	rsia
 肉食者鄙	rsib
 软指标	rsib
 如注	rsid
@@ -106252,7 +106037,6 @@ QQ密码	qqmm
 软组织	rsii
 软着陆	rsil
 人生自古谁无死	rsis
-如织	rsix
 软件包	rsjb
 软件部	rsjb
 软禁	rsjc
@@ -106267,29 +106051,22 @@ QQ密码	qqmm
 软键盘	rsjp
 软脚	rsjv
 软脚虾	rsjx
-如镜	rsjy
 软件业	rsjy
 如数家珍	rsjz
 软件站	rsjz
 如丧考妣	rskb
 软流层	rslc
-如流	rsld
 如来佛	rslf
 如来	rslh
 软肋	rslv
 如梦	rsmc
 软木	rsmc
-如蒙	rsme
-如麻	rsmh
-如命	rsmj
 软绵绵	rsmm
 软木塞	rsms
 软毛	rsmt
 戎马	rsmx
 轫	rsn
-如泥	rsnd
 人寿年丰	rsnf
-如您	rsnj
 轫	rsnk
 如能	rsnl
 软皮	rspn
@@ -106305,26 +106082,20 @@ QQ密码	qqmm
 软弱	rsrb
 如若	rsre
 人山人海	rsrh
-如人	rsrj
 软软	rsrs
 软弱性	rsrx
 娆	rss
 娆	rssa
-如梭	rssc
 如水	rssd
 如斯	rssf
 惹事生非	rssf
 惹是生非	rssf
 日上三竿	rssg
-如霜	rssh
 软柿子	rssi
 软食	rssj
-如神	rssl
-如诗	rssl
 软实力	rssl
 如数	rssm
 如实	rssn
-如山	rsso
 妊娠期	rssq
 如是	rssr
 如上所述	rsss
@@ -106350,15 +106121,10 @@ QQ密码	qqmm
 软	rsw
 软卧	rswf
 如未	rswg
-如雾	rswh
 软	rswj
 软	rswk
 如是我闻	rsww
-如想	rsxc
-如洗	rsxd
 如下	rsxf
-如新	rsxh
-如雪	rsxh
 如需	rsxh
 如戏	rsxl
 如许	rsxl
@@ -106369,8 +106135,6 @@ QQ密码	qqmm
 如有	rsya
 人手一册	rsyc
 如一	rsyd
-如要	rsyf
-如雨	rsyf
 如云	rsyg
 如玉	rsyg
 如意	rsyh
@@ -106380,12 +106144,9 @@ QQ密码	qqmm
 如烟	rsym
 如因	rsyo
 日甚一日	rsyr
-如与	rsys
-如用	rsyw
 如约	rsyx
 日思夜想	rsyx
 轫	rsz
-如在	rsza
 肉食者鄙	rszb
 软指标	rszb
 如注	rszd
@@ -106396,7 +106157,6 @@ QQ密码	qqmm
 轫	rszk
 软着陆	rszl
 人生自古谁无死	rszs
-如织	rszx
 软组织	rszz
 壬	rt
 如同白昼	rtbi
@@ -122347,10 +122107,8 @@ QQ密码	qqmm
 癯	uhoj
 瘸	uhok
 敲破	uhpa
-期货品种	uhpi
 旗袍	uhpl
 亲朋	uhpv
-期货品种	uhpz
 亲戚	uhqa
 弃权	uhqc
 凄清	uhqd
@@ -124401,12 +124159,10 @@ QQ密码	qqmm
 全身皮肤	uspf
 轻飘	uspf
 七品	uspi
-强势品种	uspi
 轻拍	uspk
 轻判	uspm
 轻飘飘	uspp
 切片	uspr
-强势品种	uspz
 七巧板	usqb
 翘翘板	usqb
 轻骑兵	usqb
@@ -127999,7 +127755,6 @@ Z	vyz
 偎	wjo
 偎	wjos
 伪品	wjpi
-物价平稳	wjpw
 外交渠道	wjqd
 问其	wjqf
 挖掘潜力	wjql
@@ -133805,12 +133560,10 @@ Z	vyz
 诇	xloi
 禤	xlol
 许配	xlpf
-系列品种	xlpi
 戏评	xlpl
 熊皮	xlpn
 心魄	xlpr
 新老朋友	xlpy
-系列品种	xlpz
 星罗棋布	xlqb
 下利清谷	xlqg
 心齐	xlqh
@@ -135081,7 +134834,6 @@ Z	vyz
 寻亲访友	xqfy
 须发	xqfz
 须根	xqgc
-兴趣广泛	xqgf
 稀奇古怪	xqgg
 舷	xqh
 舷号	xqhi
@@ -136098,7 +135850,6 @@ Z	vyz
 寻亲访友	xufy
 圩	xug
 喜感	xuga
-兴趣广泛	xugf
 稀奇古怪	xugg
 喜获	xuhe
 贤惠	xuhf
@@ -139629,12 +139380,10 @@ Z	vyz
 鞅	yfo
 鞅	yfok
 亚欧	yfos
-依法批准	yfpi
 要凭	yfpj
 雨披	yfpk
 亚平宁	yfpn
 迎风飘扬	yfpy
-依法批准	yfpz
 要强	yfqb
 要求	yfqf
 一份牵挂	yfqg
@@ -141907,13 +141656,11 @@ Z	vyz
 勇攀	ylpc
 娱乐频道	ylpd
 永平	ylph
-优良品种	ylpi
 预判	ylpm
 又怕	ylpn
 严厉批评	ylpp
 一路攀升	ylps
 诱骗	ylpx
-优良品种	ylpz
 冤屈	ylqb
 语气词	ylqc
 永清	ylqd
@@ -145578,10 +145325,8 @@ Z	vyz
 缨	yxos
 异香扑鼻	yxpb
 验票	yxpf
-优秀品质	yxpi
 幽僻	yxpj
 有些片面	yxpm
-优秀品质	yxpz
 英雄气短	yxqd
 鱼翔浅底	yxqd
 约期	yxqf
