--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -8883,6 +8883,7 @@ bilibili	blbl
 仓皇出逃	chct
 冲程	chct
 冲出去	chcu
+产出	chcv
 冲出	chcv
 才华出众	chcz
 充电宝	chdb
@@ -14769,8 +14770,8 @@ bilibili	blbl
 渎	ddfc
 大大方方	ddff
 豆腐干	ddfg
-单刀赴会	ddfh
 豆腐	ddfh
+单刀赴会	ddfh
 豆腐渣	ddfi
 洞房	ddfl
 淀粉	ddfm
@@ -26407,6 +26408,7 @@ bilibili	blbl
 滚石	gdsa
 光电鼠标	gdsb
 灌水	gdsd
+泔水	gdsd
 港商	gdsh
 广大市民	gdsm
 高档商品	gdsp
@@ -34301,8 +34303,8 @@ GPRS	gprs
 罕有	hlya
 欢迎词	hlyc
 谎言	hlyh
-话音	hlyh
 讳言	hlyh
+话音	hlyh
 话里有话	hlyh
 话语	hlyl
 黄粱一梦	hlym
@@ -36905,6 +36907,7 @@ GPRS	gprs
 虎目	hymo
 花样年华	hynh
 好意难却	hynq
+含饴弄孙	hyns
 虎年	hynt
 好意难却	hynu
 行业排名	hypm
@@ -40452,8 +40455,8 @@ GPRS	gprs
 拙荆	ikje
 拯救	ikjf
 指教	ikjf
-指甲盖	ikjg
 撞击	ikjg
+指甲盖	ikjg
 折旧	ikji
 征集	ikjj
 抓阄	ikjj
@@ -52807,7 +52810,7 @@ GPRS	gprs
 绝口	jxki
 结扣	jxkk
 结课	jxkl
-缴款	jxku
+结块	jxku
 结款	jxku
 骄狂	jxkw
 经	jxl
@@ -65367,6 +65370,7 @@ GPRS	gprs
 密苏里	mnsl
 忙说	mnsl
 密室	mnsn
+密实	mnsn
 模拟试题	mnst
 蜜色	mnsw
 蜜桃	mntc
@@ -105734,25 +105738,14 @@ QQ密码	qqmm
 若烹小鲜	rpxx
 热情奔放	rqbf
 人气不旺	rqbw
-日趋成熟	rqcs
-日趋恶化	rqeh
 如期而至	rqei
 如期而至	rqez
-日趋丰富	rqff
-日趋规范	rqgf
 热情高涨	rqgi
 热情高涨	rqgz
 人气火爆	rqhb
-热情很高	rqhg
-热情好客	rqhk
-日趋合理	rqhl
-热情欢迎	rqhy
 人穷志短	rqid
 热情周到	rqid
-热情接待	rqjd
 人群健康	rqjk
-日趋激烈	rqjl
-日趋扩大	rqkd
 热情开朗	rqkl
 人情练达	rqld
 人情练达即文章	rqli
@@ -105778,7 +105771,6 @@ QQ密码	qqmm
 人弃我取	rqwq
 人取我与	rqwy
 融洽相处	rqxc
-日趋下降	rqxj
 认清形势	rqxs
 热切希望	rqxw
 日清月结	rqyj
@@ -106200,27 +106192,16 @@ QQ密码	qqmm
 堧	ruaa
 热情奔放	rubf
 人气不旺	rubw
-日趋成熟	rucs
-日趋恶化	rueh
 如期而至	ruei
 如期而至	ruez
-日趋丰富	ruff
-日趋规范	rugf
 热情高涨	rugi
 热情高涨	rugz
 壤	ruh
 人气火爆	ruhb
-热情很高	ruhg
 壤	ruhi
 热情好客	ruhk
-日趋合理	ruhl
-热情欢迎	ruhy
 人穷志短	ruid
-热情周到	ruid
-热情接待	rujd
 人群健康	rujk
-日趋激烈	rujl
-日趋扩大	rukd
 热情开朗	rukl
 人情练达	ruld
 人情练达即文章	ruli
@@ -106248,13 +106229,10 @@ QQ密码	qqmm
 人弃我取	ruwu
 人取我与	ruwy
 融洽相处	ruxc
-日趋下降	ruxj
 认清形势	ruxs
 热切希望	ruxw
-日趋严重	ruyi
 日清月结	ruyj
 热情洋溢	ruyy
-日趋严重	ruyz
 人穷志短	ruzd
 热情周到	ruzd
 然	rv
@@ -107612,8 +107590,8 @@ QQ密码	qqmm
 挲	sdk
 实地考察	sdkc
 手动开关	sdkg
-水库	sdkh
 深刻	sdkh
+水库	sdkh
 漱口	sdki
 挲	sdkk
 沈括	sdkk
@@ -119442,8 +119420,8 @@ QQ密码	qqmm
 特区	ttus
 透气	ttut
 秃	ttw
-团团围住	ttwi
 甜味	ttwi
+团团围住	ttwi
 特为	ttwm
 特委	ttwt
 特务	ttww
@@ -137116,7 +137094,6 @@ Z	vyz
 压顶	yadf
 郁达夫	yadf
 有毒	yadg
-右端	yadh
 硬度	yadh
 压担子	yadi
 压倒	yadj
@@ -139428,10 +139405,8 @@ Z	vyz
 氧氟沙星	yfsx
 雨丝	yfsx
 约法三章	yfsz
-一份提案	yfta
 亚太	yfta
 雨天	yftg
-一份通知	yfti
 要听	yfti
 敔	yftk
 要同	yfto
@@ -145074,6 +145049,7 @@ Z	vyz
 逸仙	ywxj
 印行	ywxk
 用心	ywxl
+疑心	ywxl
 疑凶	ywxm
 逸兴	ywxn
 鱼虾	ywxo
@@ -149272,8 +149248,8 @@ Z	vyz
 拙荆	zkje
 拯救	zkjf
 指教	zkjf
-指甲盖	zkjg
 撞击	zkjg
+指甲盖	zkjg
 折旧	zkji
 征集	zkjj
 抓阄	zkjj
