20240630-052607：删一份、加巫妖王。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -126622,6 +126622,7 @@ Z	vyz
 五言诗	wfys
 巫医	wfys
 五月	wfyv
+巫妖王	wfyw
 为非作歹	wfzd
 五洲	wfzd
 卧姿	wfzh
@@ -139136,10 +139137,8 @@ Z	vyz
 颐	yfa
 颐	yfaj
 要按	yfak
-一份安宁	yfan
 要案	yfan
 要隘	yfav
-一份爱心	yfax
 要不	yfba
 雨布	yfba
 以防不测	yfbc
@@ -139222,7 +139221,6 @@ Z	vyz
 要犯	yffw
 亚非	yffy
 酝	yfg
-一份关爱	yfga
 严格	yfgc
 一分耕耘，一分收获	yfgh
 酝	yfgl
@@ -139306,7 +139304,6 @@ Z	vyz
 雨	yfkk
 雨裤	yfkl
 要快	yfkn
-一份宽容	yfkr
 要靠	yfkt
 一番苦心	yfkx
 有法可依	yfky
@@ -139327,7 +139324,6 @@ Z	vyz
 要览	yflu
 要脸	yflv
 鄢陵	yflv
-一份礼物	yflw
 耶鲁	yflw
 一府两院	yfly
 燕	yfm
@@ -139363,7 +139359,6 @@ Z	vyz
 迎风飘扬	yfpy
 要强	yfqb
 要求	yfqf
-一份牵挂	yfqg
 要球	yfqg
 一分钱一分货	yfqh
 一发千钧	yfqj
@@ -139414,10 +139409,8 @@ Z	vyz
 亚太区	yftu
 有福同享	yftx
 义愤填膺	yfty
-一份通知	yftz
 要强	yfub
 要求	yfuf
-一份牵挂	yfug
 要球	yfug
 一分钱一分货	yfuh
 一发千钧	yfuj
