20240701-025416：比对到u头做完。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -3398,10 +3398,10 @@ CPU	cpu
 保质	bjiq
 保质期	bjiq
 保证书	bjis
-不经之谈	bjit
-不进则退	bjit
 保重	bjit
 保长	bjit
+不经之谈	bjit
+不进则退	bjit
 保质期	bjiu
 保障	bjiv
 保组	bjix
@@ -3604,8 +3604,8 @@ CPU	cpu
 伴游	bjyd
 败局已定	bjyd
 不绝于耳	bjye
-不拘一格	bjyg
 便于	bjyg
+不拘一格	bjyg
 冰肌玉骨	bjyg
 别具一格	bjyg
 波谲云诡	bjyg
@@ -3632,19 +3632,19 @@ CPU	cpu
 便装	bjzh
 邦交正常化	bjzh
 闭嘴	bjzi
-保住	bjzj
 保值	bjzj
 保证金	bjzj
+保住	bjzj
 保证	bjzl
 必经之路	bjzl
 闭着	bjzm
 保质	bjzq
 保质期	bjzq
 保证书	bjzs
-不经之谈	bjzt
-不进则退	bjzt
 保重	bjzt
 保长	bjzt
+不经之谈	bjzt
+不进则退	bjzt
 保质期	bjzu
 倍增	bjzu
 保障	bjzv
@@ -26148,6 +26148,7 @@ bilibili	blbl
 构筑物	gciw
 桧	gcj
 格局	gcjb
+构建	gcjb
 柑橘	gcjc
 觥筹交错	gcjc
 根据地	gcjd
@@ -39290,6 +39291,7 @@ GPRS	gprs
 主人翁	ihrw
 震撼人心	ihrx
 姿	ihs
+装死	ihsa
 壮硕	ihsa
 座上宾	ihsb
 张皇失措	ihsc
@@ -55434,18 +55436,19 @@ GPRS	gprs
 开开心心	kkxx
 看些	kkxy
 慷慨相助	kkxz
+抗压	kkya
 抗原	kkya
 看样	kkyc
 揩油	kkyd
 抗药	kkye
-扩音	kkyh
-抗氧化	kkyh
 抗疫	kkyh
+抗氧化	kkyh
+扩音	kkyh
 抗议者	kkyi
 看样子	kkyi
-开阔眼界	kkyj
-扩音机	kkyj
 括约肌	kkyj
+扩音机	kkyj
+开阔眼界	kkyj
 扣押	kkyk
 看一看	kkyk
 抗议	kkyl
@@ -100275,8 +100278,8 @@ GPRS	gprs
 青黛	qgdj
 青灯	qgdm
 球队	qgdv
-契丹	qgdw
 青岛	qgdw
+契丹	qgdw
 球儿	qgew
 琪	qgf
 强国富民	qgfm
@@ -100335,10 +100338,10 @@ GPRS	gprs
 勤工助学	qgix
 青紫	qgiy
 琴	qgj
-千古绝唱	qgjc
+青椒	qgjc
 契机	qgjc
 琴	qgjc
-青椒	qgjc
+千古绝唱	qgjc
 穷根究底	qgjd
 球茎	qgje
 球菌	qgje
@@ -100466,8 +100469,8 @@ GPRS	gprs
 球艺	qgye
 青玉	qgyg
 球衣	qgyh
-琴音	qgyh
 青衣	qgyh
+琴音	qgyh
 棋高一着	qgyi
 球员	qgyi
 奇功一件	qgyj
@@ -100534,8 +100537,8 @@ GPRS	gprs
 亲	qhc
 凄楚	qhcc
 齐唱	qhci
-凄恻	qhcn
 凄惨	qhcn
+凄恻	qhcn
 弃船	qhcq
 弃城	qhcu
 敲除	qhcv
@@ -100609,7 +100612,6 @@ GPRS	gprs
 亲姐妹	qhjm
 亲眷	qhjm
 亲家	qhjn
-弃家	qhjn
 亲见	qhjo
 亲近	qhjq
 旗舰	qhjq
@@ -100770,6 +100772,7 @@ GPRS	gprs
 秋毫之末	qhzm
 敲字	qhzn
 旗帜	qhzo
+弃置	qhzo
 亲自	qhzr
 亲子	qhzv
 瘸子	qhzv
@@ -101023,8 +101026,8 @@ GPRS	gprs
 侵占	qjiy
 俏	qjj
 全歼	qjja
-侨居	qjjb
 全局	qjjb
+侨居	qjjb
 全接触	qjjc
 全聚德	qjjd
 全家福	qjjf
@@ -101041,6 +101044,7 @@ GPRS	gprs
 俏	qjjv
 全角	qjjw
 企及	qjjw
+倾角	qjjw
 全局性	qjjx
 勤俭节约	qjjy
 全开	qjkg
@@ -101082,8 +101086,8 @@ GPRS	gprs
 情景模拟	qjmn
 全明	qjmr
 全毛	qjmt
-全免	qjmw
 全名	qjmw
+全免	qjmw
 全马	qjmx
 强奸民意	qjmy
 伽	qjn
@@ -101100,7 +101104,6 @@ GPRS	gprs
 阒	qjoa
 全屏	qjpb
 全票	qjpf
-清洁皮肤	qjpf
 俏皮话	qjph
 全凭	qjpj
 全拼	qjpk
@@ -101161,8 +101164,8 @@ GPRS	gprs
 全套	qjta
 侵吞	qjtg
 全天候	qjth
-倾吐	qjti
 倾听	qjti
+倾吐	qjti
 全体	qjtj
 全托	qjtk
 倾谈	qjtl
@@ -101293,8 +101296,8 @@ GPRS	gprs
 抢发	qkfn
 抢匪	qkfs
 抢发	qkfz
-撬杠	qkgc
 撬棍	qkgc
+撬杠	qkgc
 抢攻	qkgf
 抢光	qkgj
 抢购	qkgo
@@ -101406,7 +101409,6 @@ GPRS	gprs
 趋利避害	qlbh
 权利保障	qlbi
 襁	qlbi
-请别	qlbi
 启闭	qlbj
 曲率半径	qlbj
 请便	qlbj
@@ -101465,9 +101467,8 @@ GPRS	gprs
 启发性	qlfx
 启发	qlfz
 请	qlg
-请功	qlgf
 谦恭	qlgf
-全力搞好	qlgh
+请功	qlgf
 千里共婵娟	qlgj
 劝告	qlgt
 请	qlgv
@@ -101516,13 +101517,14 @@ GPRS	gprs
 请教	qljf
 请柬	qljf
 请进	qljg
+劝进	qljg
 请将	qljh
 袷	qlji
 请假	qljj
+请讲	qljl
 劝诫	qljl
 劝谏	qljl
 裙裾	qljl
-请讲	qljl
 谯	qljm
 劝架	qljn
 黔驴技穷	qljq
@@ -101570,8 +101572,8 @@ GPRS	gprs
 强烈批评	qlpp
 祈	qlq
 强烈期待	qlqd
-祈求	qlqf
 请求	qlqf
+祈求	qlqf
 祈	qlqi
 劝劝	qlql
 请去	qlqu
@@ -101599,6 +101601,7 @@ GPRS	gprs
 讫	qltc
 祛痰	qlth
 请听	qlti
+强烈推荐	qltj
 强力推荐	qltj
 啟	qltk
 请托	qltk
@@ -101643,8 +101646,8 @@ GPRS	gprs
 前列腺素	qlxs
 祛邪	qlxs
 请先	qlxt
-劝降	qlxv
 谦逊	qlxv
+劝降	qlxv
 逡巡	qlxx
 前列腺炎	qlxy
 谦虚	qlxy
@@ -101656,7 +101659,6 @@ GPRS	gprs
 请于	qlyg
 祛瘀	qlyh
 劝诱	qlyl
-请予	qlyl
 请原谅	qlyl
 千虑一失	qlys
 请与	qlys
@@ -101674,9 +101676,9 @@ GPRS	gprs
 谴责	qlzg
 全力抓好	qlzh
 裙装	qlzh
-劝住	qlzj
 请坐	qlzj
 请指教	qlzj
+劝住	qlzj
 黔驴之技	qlzj
 请找	qlzk
 骑驴找驴	qlzl
@@ -101716,7 +101718,6 @@ GPRS	gprs
 羌	qmcc
 前朝	qmcf
 前次	qmch
-前仇	qmcj
 前侧	qmcj
 前尘	qmcp
 前舱	qmcq
@@ -101878,7 +101879,6 @@ GPRS	gprs
 郄	qmv
 郄	qmvv
 歉	qmw
-前无	qmwg
 拳王	qmwg
 前文	qmwh
 千门万户	qmwh
@@ -101887,9 +101887,7 @@ GPRS	gprs
 前五年	qmwn
 前晚	qmwr
 前卫	qmwv
-却没想到	qmxd
 前项	qmxf
-却没想过	qmxg
 前行	qmxk
 前戏	qmxl
 前些年	qmxn
@@ -101904,19 +101902,15 @@ GPRS	gprs
 前些	qmxy
 前有	qmya
 前已	qmyb
-前一段	qmyd
 前沿	qmyd
 启蒙运动	qmyd
+歉意	qmyh
 前夜	qmyh
 前言	qmyh
-歉意	qmyh
 前一阵	qmyi
 前仰	qmyj
 前因	qmyo
-前一排	qmyp
-前一日	qmyr
 前牙	qmys
-前一天	qmyt
 前移	qmyt
 前院	qmyv
 前缘	qmyx
@@ -102169,14 +102163,14 @@ GPRS	gprs
 岂	qob
 岂不	qoba
 峭壁	qobb
-屺	qobc
 曲柄	qobc
-岂不知	qobi
+屺	qobc
 曲别针	qobi
+岂不知	qobi
 峭拔	qobk
 瞧不起	qobq
-且不说	qobs
 岂不是	qobs
+且不说	qobs
 且不说	qoby
 岂不知	qobz
 曲别针	qobz
@@ -102223,8 +102217,8 @@ GPRS	gprs
 黢黑	qoho
 黥	qohp
 蛴	qohr
-且在	qoia
 嵌在	qoia
+且在	qoia
 曲张	qoib
 曲泽	qoid
 曲直	qoif
@@ -102311,8 +102305,8 @@ GPRS	gprs
 遣散	qosf
 遣使	qosj
 且说	qosl
-螓首	qosm
 遣送	qosm
+螓首	qosm
 黔首	qosm
 囚室	qosn
 岐山	qoso
@@ -102647,7 +102641,6 @@ QQ密码	qqmm
 七损八益	qsby
 区别于	qsby
 椠	qsc
-切成	qsca
 切磋	qsca
 七层	qscb
 翘楚	qscc
@@ -102753,8 +102746,8 @@ QQ密码	qqmm
 轻机枪	qsju
 区际	qsjv
 七九	qsjw
-七级	qsjx
 区级	qsjx
+七级	qsjx
 穷奢极欲	qsjy
 切开	qskg
 顷刻	qskh
@@ -102859,10 +102852,10 @@ QQ密码	qqmm
 轻生	qsst
 轻声	qssu
 七色	qssw
-全身上下	qssx
-切丝	qssx
-欺霜赛雪	qssx
 轻纱	qssx
+切丝	qssx
+全身上下	qssx
+欺霜赛雪	qssx
 轻弹	qstb
 七天	qstg
 切实提高	qstg
@@ -102974,6 +102967,7 @@ QQ密码	qqmm
 轻舟	qszq
 轻松自如	qszr
 轻重	qszt
+区长	qszt
 妻子	qszv
 切纸	qszx
 雀鼠之争	qszz
@@ -103088,14 +103082,15 @@ QQ密码	qqmm
 氰化物	qthw
 千	qti
 千丈	qtia
-乔治敦	qtid
 气滞	qtid
+乔治	qtid
 千载	qtif
 乔装	qtih
 千纸鹤	qtih
 签章	qtih
 擎天之柱	qtii
 签证	qtil
+气炸	qtim
 千兆	qtim
 签字	qtin
 签账	qtio
@@ -103143,7 +103138,6 @@ QQ密码	qqmm
 气力	qtln
 千里	qtlo
 气量	qtlr
-千虑	qtly
 千里眼	qtly
 气力	qtlz
 秋	qtm
@@ -103153,7 +103147,6 @@ QQ密码	qqmm
 签名档	qtmd
 秋末	qtmg
 气闷	qtmj
-缺门	qtmj
 穷途末路	qtml
 千米	qtmm
 气密	qtmn
@@ -103191,6 +103184,7 @@ QQ密码	qqmm
 乔	qtr
 气人	qtrj
 气溶胶	qtrj
+缺人	qtrj
 气体燃料	qtrl
 迁入	qtrm
 千日	qtrr
@@ -103199,13 +103193,12 @@ QQ密码	qqmm
 箧	qts
 气盛	qtsa
 缺水	qtsd
-气吞山河	qtsh
-秋熟	qtsh
-秋霜	qtsh
 签售会	qtsh
+气吞山河	qtsh
+秋霜	qtsh
 箧	qtsh
-情同手足	qtsi
 缺省值	qtsi
+情同手足	qtsi
 签售	qtsj
 气势	qtsk
 气数	qtsm
@@ -103261,8 +103254,8 @@ QQ密码	qqmm
 千万元	qtwy
 气相	qtxc
 秋汛	qtxd
-气旋	qtxh
 缺席	qtxh
+气旋	qtxh
 气象站	qtxi
 气象局	qtxj
 迁徙	qtxk
@@ -103286,30 +103279,31 @@ QQ密码	qqmm
 千元	qtyg
 氢氧根	qtyg
 情投意合	qtyh
-氢氧化	qtyh
 秋意	qtyh
+氢氧化	qtyh
 秋叶	qtyi
 千余	qtyj
 气焰	qtym
 气宇	qtyn
 千余人	qtyr
 乔伊斯	qtys
-缺氧	qtyt
 迁移	qtyt
+缺氧	qtyt
+氢氧	qtyt
 秋月	qtyv
 签约	qtyx
 千丈	qtza
 千张	qtzb
-乔治敦	qtzd
 气滞	qtzd
+乔治	qtzd
 千载	qtzf
 乔装	qtzh
 千纸鹤	qtzh
 签章	qtzh
 穷途之哭	qtzk
 签证	qtzl
-千兆	qtzm
 气炸	qtzm
+千兆	qtzm
 签字	qtzn
 签账	qtzo
 气质	qtzq
@@ -103375,11 +103369,9 @@ QQ密码	qqmm
 趋动	qudg
 去痘	qudh
 起动机	qudj
-去得	qudk
 去掉	qudk
 起到了	qudl
 起电	qudo
-去到	quds
 起到	quds
 墙垛	qudu
 去冬	qudw
@@ -103402,7 +103394,6 @@ QQ密码	qqmm
 却非	qufy
 起飞	qufz
 墙根	qugc
-却更	qugf
 去过	qugf
 奇奇怪怪	qugg
 起卦	qugu
@@ -103535,8 +103526,8 @@ QQ密码	qqmm
 琴棋书画	qush
 娶妻生子	qusi
 却使	qusj
-起誓	qusk
 趋势	qusk
+起誓	qusk
 起诉	qusl
 起身	qusr
 起始	quss
@@ -103614,14 +103605,11 @@ QQ密码	qqmm
 却已	quyb
 起源	quyd
 却要	quyf
-起于	quyg
 趋于	quyg
 起夜	quyh
 却又	quyl
 起义	quym
 起因	quyo
-起眼	quyo
-却与	quys
 权倾一时	quys
 却也	quyv
 起疑	quyw
@@ -103790,10 +103778,10 @@ QQ密码	qqmm
 驱虫剂	qxcj
 驱虫	qxco
 强行闯入	qxcr
-驱车	qxcs
 骑车	qxcs
-驱策	qxct
+驱车	qxcs
 骑乘	qxct
+驱策	qxct
 驱除	qxcv
 驱驰	qxcx
 驱虫药	qxcy
@@ -104040,7 +104028,6 @@ QQ密码	qqmm
 亲眼所见	qysj
 歧视	qysl
 钱数	qysm
-歧山	qyso
 铅山	qyso
 铅丝	qysx
 缺医少药	qysy
@@ -121607,8 +121594,8 @@ QQ密码	qqmm
 青黛	ugdj
 青灯	ugdm
 球队	ugdv
-契丹	ugdw
 青岛	ugdw
+契丹	ugdw
 球儿	ugew
 琪	ugf
 强国富民	ugfm
@@ -121655,6 +121642,7 @@ QQ密码	qqmm
 青壮	ugih
 窃钩者诛	ugii
 契证	ugil
+青冢	ugil
 强国之路	ugil
 青州	ugim
 青壮年	ugin
@@ -121667,10 +121655,10 @@ QQ密码	qqmm
 勤工助学	ugix
 青紫	ugiy
 琴	ugj
-千古绝唱	ugjc
+青椒	ugjc
 契机	ugjc
 琴	ugjc
-青椒	ugjc
+千古绝唱	ugjc
 穷根究底	ugjd
 球茎	ugje
 球菌	ugje
@@ -121749,6 +121737,7 @@ QQ密码	qqmm
 青少年	ugsn
 青史	ugso
 青山	ugso
+青蛇	ugso
 琴师	ugsp
 契税	ugst
 琴声	ugsu
@@ -121796,8 +121785,8 @@ QQ密码	qqmm
 球艺	ugye
 青玉	ugyg
 球衣	ugyh
-琴音	ugyh
 青衣	ugyh
+琴音	ugyh
 棋高一着	ugyi
 球员	ugyi
 奇功一件	ugyj
@@ -121860,8 +121849,8 @@ QQ密码	qqmm
 亲	uhc
 凄楚	uhcc
 齐唱	uhci
-凄恻	uhcn
 凄惨	uhcn
+凄恻	uhcn
 弃船	uhcq
 弃城	uhcu
 敲除	uhcv
@@ -121917,6 +121906,7 @@ QQ密码	qqmm
 秋毫之末	uhim
 敲字	uhin
 旗帜	uhio
+弃置	uhio
 亲自	uhir
 亲子	uhiv
 瘸子	uhiv
@@ -121934,7 +121924,6 @@ QQ密码	qqmm
 齐集	uhjj
 亲姐妹	uhjm
 亲家	uhjn
-弃家	uhjn
 亲见	uhjo
 亲近	uhjq
 旗舰	uhjq
@@ -121996,6 +121985,7 @@ QQ密码	qqmm
 齐	uhr
 亲人	uhrj
 旗人	uhrj
+侵华日军	uhrj
 亲热	uhrk
 敲入	uhrm
 亲日派	uhrp
@@ -122346,8 +122336,8 @@ QQ密码	qqmm
 侵占	ujiy
 俏	ujj
 全歼	ujja
-侨居	ujjb
 全局	ujjb
+侨居	ujjb
 全接触	ujjc
 全聚德	ujjd
 全家福	ujjf
@@ -122364,6 +122354,7 @@ QQ密码	qqmm
 俏	ujjv
 全角	ujjw
 企及	ujjw
+倾角	ujjw
 全局性	ujjx
 勤俭节约	ujjy
 全开	ujkg
@@ -122404,8 +122395,8 @@ QQ密码	qqmm
 情景模拟	ujmn
 全明	ujmr
 全毛	ujmt
-全免	ujmw
 全名	ujmw
+全免	ujmw
 全马	ujmx
 强奸民意	ujmy
 伽	ujn
@@ -122422,7 +122413,6 @@ QQ密码	qqmm
 阒	ujoa
 全屏	ujpb
 全票	ujpf
-清洁皮肤	ujpf
 俏皮话	ujph
 全凭	ujpj
 全拼	ujpk
@@ -122485,8 +122475,8 @@ QQ密码	qqmm
 全套	ujta
 侵吞	ujtg
 全天候	ujth
-倾吐	ujti
 倾听	ujti
+倾吐	ujti
 全体	ujtj
 全托	ujtk
 倾谈	ujtl
@@ -122610,8 +122600,8 @@ QQ密码	qqmm
 抢发	ukfn
 抢匪	ukfs
 抢发	ukfz
-撬杠	ukgc
 撬棍	ukgc
+撬杠	ukgc
 抢攻	ukgf
 抢光	ukgj
 抢购	ukgo
@@ -122723,7 +122713,6 @@ QQ密码	qqmm
 趋利避害	ulbh
 权利保障	ulbi
 襁	ulbi
-请别	ulbi
 启闭	ulbj
 曲率半径	ulbj
 请便	ulbj
@@ -122783,9 +122772,8 @@ QQ密码	qqmm
 启发性	ulfx
 启发	ulfz
 请	ulg
-请功	ulgf
 谦恭	ulgf
-全力搞好	ulgh
+请功	ulgf
 千里共婵娟	ulgj
 劝告	ulgt
 请	ulgv
@@ -122809,9 +122797,9 @@ QQ密码	qqmm
 侵略战争	ulii
 千里之足	ulii
 情理之中	ulii
-劝住	ulij
 请坐	ulij
 请指教	ulij
+劝住	ulij
 黔驴之技	ulij
 请找	ulik
 骑驴找驴	ulil
@@ -122833,12 +122821,15 @@ QQ密码	qqmm
 劝酒	uljd
 请教	uljf
 请柬	uljf
-劝进	uljg
 请进	uljg
+劝进	uljg
 请将	uljh
 袷	ulji
 请假	uljj
 请讲	uljl
+劝诫	uljl
+劝谏	uljl
+裙裾	uljl
 谯	uljm
 劝架	uljn
 请假条	uljt
@@ -122917,6 +122908,8 @@ QQ密码	qqmm
 祛痰	ulth
 请听	ulti
 啟	ultk
+强烈推荐	ultj
+强力推荐	ultj
 啟	ultm
 清利头目	ultm
 请帖	ulto
@@ -122956,8 +122949,8 @@ QQ密码	qqmm
 前列腺素	ulxs
 祛邪	ulxs
 请先	ulxt
-劝降	ulxv
 谦逊	ulxv
+劝降	ulxv
 逡巡	ulxx
 前列腺炎	ulxy
 谦虚	ulxy
@@ -122968,7 +122961,6 @@ QQ密码	qqmm
 请于	ulyg
 祛瘀	ulyh
 劝诱	ulyl
-请予	ulyl
 请原谅	ulyl
 千虑一失	ulys
 请与	ulys
@@ -123025,7 +123017,6 @@ QQ密码	qqmm
 羌	umcc
 前朝	umcf
 前次	umch
-前仇	umcj
 前侧	umcj
 前尘	umcp
 前舱	umcq
@@ -123186,7 +123177,6 @@ QQ密码	qqmm
 郄	umv
 郄	umvv
 歉	umw
-前无	umwg
 拳王	umwg
 前文	umwh
 千门万户	umwh
@@ -123212,20 +123202,18 @@ QQ密码	qqmm
 前些	umxy
 前有	umya
 前已	umyb
-前一段	umyd
 前沿	umyd
 启蒙运动	umyd
-前言	umyh
 歉意	umyh
+前言	umyh
+前夜	umyh
 前一阵	umyi
 前仰	umyj
 前因	umyo
-前一排	umyp
-前一日	umyr
 前牙	umys
-前一天	umyt
 前院	umyv
 前缘	umyx
+前一阵	umyz
 券	umz
 前者	umzf
 前奏	umzg
@@ -123466,15 +123454,14 @@ QQ密码	qqmm
 岂	uob
 岂不	uoba
 峭壁	uobb
-屺	uobc
 曲柄	uobc
-岂不知	uobi
+屺	uobc
 曲别针	uobi
+岂不知	uobi
 峭拔	uobk
-且不说	uobs
 岂不是	uobs
+且不说	uobs
 瞧不起	uobu
-且不说	uoby
 岂不知	uobz
 曲别针	uobz
 虬	uoc
@@ -123520,8 +123507,8 @@ QQ密码	qqmm
 黢黑	uoho
 黥	uohp
 蛴	uohr
-且在	uoia
 嵌在	uoia
+且在	uoia
 曲张	uoib
 曲泽	uoid
 曲直	uoif
@@ -123609,8 +123596,8 @@ QQ密码	qqmm
 遣散	uosf
 遣使	uosj
 且说	uosl
-螓首	uosm
 遣送	uosm
+螓首	uosm
 黔首	uosm
 囚室	uosn
 岐山	uoso
@@ -123657,8 +123644,8 @@ QQ密码	qqmm
 蚯蚓	uoyo
 曲阳	uoyv
 嵚	uoyw
-且在	uoza
 嵌在	uoza
+且在	uoza
 曲张	uozb
 曲泽	uozd
 曲直	uozf
@@ -123867,7 +123854,6 @@ QQ密码	qqmm
 七损八益	usby
 区别于	usby
 椠	usc
-切成	usca
 切磋	usca
 七层	uscb
 翘楚	uscc
@@ -123949,8 +123935,8 @@ QQ密码	qqmm
 轻则	usio
 轻舟	usiq
 轻松自如	usir
-区长	usit
 轻重	usit
+区长	usit
 妻子	usiv
 切纸	usix
 辁	usj
@@ -123972,8 +123958,8 @@ QQ密码	qqmm
 轻机枪	usju
 区际	usjv
 七九	usjw
-七级	usjx
 区级	usjx
+七级	usjx
 穷奢极欲	usjy
 切开	uskg
 顷刻	uskh
@@ -124085,10 +124071,10 @@ QQ密码	qqmm
 情随事迁	ussu
 轻声	ussu
 七色	ussw
-全身上下	ussx
-切丝	ussx
-欺霜赛雪	ussx
 轻纱	ussx
+切丝	ussx
+全身上下	ussx
+欺霜赛雪	ussx
 轻弹	ustb
 七天	ustg
 切实提高	ustg
@@ -124109,6 +124095,7 @@ QQ密码	qqmm
 轻俏	usuj
 轻手轻脚	usuj
 七窍	usun
+区区	usus
 轻轻	usus
 七千	usut
 翘起	usuu
@@ -124287,6 +124274,7 @@ QQ密码	qqmm
 气呼呼	uthh
 气哼哼	uthh
 气候	uthj
+气化	uthj
 缺货	uthj
 气话	uthl
 气焊	uthm
@@ -124302,9 +124290,8 @@ QQ密码	qqmm
 千	uti
 千丈	utia
 千张	utib
-乔治	utid
-乔治敦	utid
 气滞	utid
+乔治	utid
 千载	utif
 乔装	utih
 千纸鹤	utih
@@ -124312,6 +124299,7 @@ QQ密码	qqmm
 擎天之柱	utii
 穷途之哭	utik
 签证	util
+气炸	utim
 千兆	utim
 签字	utin
 签账	utio
@@ -124359,7 +124347,6 @@ QQ密码	qqmm
 气力	utln
 千里	utlo
 气量	utlr
-千虑	utly
 千里眼	utly
 气力	utlz
 秋	utm
@@ -124369,7 +124356,6 @@ QQ密码	qqmm
 签名档	utmd
 秋末	utmg
 气闷	utmj
-缺门	utmj
 穷途末路	utml
 千米	utmm
 气密	utmn
@@ -124418,13 +124404,12 @@ QQ密码	qqmm
 箧	uts
 气盛	utsa
 缺水	utsd
-气吞山河	utsh
-秋熟	utsh
-秋霜	utsh
 签售会	utsh
+气吞山河	utsh
+秋霜	utsh
 箧	utsh
-情同手足	utsi
 缺省值	utsi
+情同手足	utsi
 签售	utsj
 气势	utsk
 气数	utsm
@@ -124477,8 +124462,8 @@ QQ密码	qqmm
 千万元	utwy
 气相	utxc
 秋汛	utxd
-气旋	utxh
 缺席	utxh
+气旋	utxh
 气象站	utxi
 气象局	utxj
 迁徙	utxk
@@ -124501,17 +124486,17 @@ QQ密码	qqmm
 千元	utyg
 氢氧根	utyg
 情投意合	utyh
-氢氧化	utyh
 秋意	utyh
+氢氧化	utyh
 秋叶	utyi
 千余	utyj
 气焰	utym
 气宇	utyn
 千余人	utyr
 乔伊斯	utys
-氢氧	utyt
-缺氧	utyt
 迁移	utyt
+缺氧	utyt
+氢氧	utyt
 秋月	utyv
 签约	utyx
 千丈	utza
@@ -124520,8 +124505,8 @@ QQ密码	qqmm
 乔装	utzh
 穷途之哭	utzk
 签证	utzl
-千兆	utzm
 气炸	utzm
+千兆	utzm
 签字	utzn
 签账	utzo
 气质	utzq
@@ -124588,11 +124573,9 @@ QQ密码	qqmm
 趋动	uudg
 去痘	uudh
 起动机	uudj
-去得	uudk
 去掉	uudk
 起到了	uudl
 起电	uudo
-去到	uuds
 起到	uuds
 墙垛	uudu
 去冬	uudw
@@ -124616,7 +124599,6 @@ QQ密码	qqmm
 却非	uufy
 起飞	uufz
 墙根	uugc
-却更	uugf
 去过	uugf
 奇奇怪怪	uugg
 起卦	uugu
@@ -124750,8 +124732,8 @@ QQ密码	uumm
 琴棋书画	uush
 娶妻生子	uusi
 却使	uusj
-趋势	uusk
 起誓	uusk
+趋势	uusk
 起诉	uusl
 起身	uusr
 起始	uuss
@@ -124831,14 +124813,11 @@ QQ密码	uumm
 却已	uuyb
 起源	uuyd
 却要	uuyf
-起于	uuyg
 趋于	uuyg
 起夜	uuyh
 却又	uuyl
 起义	uuym
 起因	uuyo
-起眼	uuyo
-却与	uuys
 权倾一时	uuys
 却也	uuyv
 起疑	uuyw
@@ -125011,11 +124990,11 @@ QQ密码	uumm
 驱虫剂	uxcj
 驱虫	uxco
 强行闯入	uxcr
-驱车	uxcs
 骑车	uxcs
-全线撤退	uxct
-驱策	uxct
+驱车	uxcs
 骑乘	uxct
+驱策	uxct
+全线撤退	uxct
 驱除	uxcv
 驱驰	uxcx
 驱虫药	uxcy
@@ -125260,7 +125239,6 @@ QQ密码	uumm
 亲眼所见	uysj
 歧视	uysl
 钱数	uysm
-歧山	uyso
 铅山	uyso
 铅丝	uysx
 缺医少药	uysy
@@ -128342,6 +128320,7 @@ Z	vyz
 胃病	wobh
 网吧	wobi
 围捕	wobk
+网暴	wobr
 幄	wobs
 围脖	wobv
 网编	wobx
@@ -136691,8 +136670,8 @@ Z	vyz
 晓以利害	xylh
 销路	xyli
 悬崖勒马	xylm
-匈牙利人	xylr
 销量	xylr
+匈牙利人	xylr
 行云流水	xyls
 心有灵犀一点通	xylt
 心有灵犀	xylx
@@ -144521,7 +144500,6 @@ Z	vyz
 也因	yvyo
 月牙泉	yvyq
 阴影	yvyr
-也与	yvys
 月牙	yvys
 阴翳	yvys
 月牙泉	yvyu
@@ -144547,9 +144525,9 @@ Z	vyz
 月租	yvzt
 臆造	yvzt
 院长	yvzt
-胭脂	yvzv
 臃肿	yvzv
 院子	yvzv
+胭脂	yvzv
 月终	yvzx
 用	yw
 狱	yw
@@ -144600,8 +144578,8 @@ Z	vyz
 用场	ywcu
 印出	ywcv
 用处	ywcw
-印钞	ywcy
 用餐	ywcy
+印钞	ywcy
 鱼	ywd
 印地安	ywda
 印第安	ywda
@@ -144619,14 +144597,13 @@ Z	vyz
 用电量	ywdl
 疑窦	ywdn
 用电	ywdo
-乐段	ywdr
 印度人	ywdr
 用到	ywds
 迎敌	ywdt
 用地	ywdu
 乐队	ywdv
-印度洋	ywdy
 疑点	ywdy
+印度洋	ywdy
 用刀	ywdz
 用得着	ywdz
 一望而知	ywei
@@ -148124,6 +148101,7 @@ Z	vyz
 主人翁	zhrw
 震撼人心	zhrx
 姿	zhs
+装死	zhsa
 壮硕	zhsa
 座上宾	zhsb
 张皇失措	zhsc
